--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <nav class="header_nav">
             <ul class="header_list">
                 <li class="list_item"><img src="" alt="logo"></li>
-                <li class="list_item"><a href="./index.html">Головна</a></li>
+                <li class="list_item"><a href="./index.html#main">Головна</a></li>
                 <li class="list_item"><a href="./index.html">Меню</a></li>
                 <li class="list_item"><a href="./index.html">Про нас</a></li>
             </ul>
@@ -21,7 +21,14 @@
         </section>
     </header>
     <main>
-        
+        <section class="main">
+            <img src="./img/bg1.jpg" alt="bg">
+            <h1 class="main_title">Кав'ярня для найбільших шанувальників кави</h1>
+            <p class="main_text">Життя починається, тільки після кави</p>
+        </section>
+        <section> 
+            
+        </section>
     </main>
     <footer>
 
